# aads

./: README.md  Untitled.ipynb  Untitled.md  install.sh  pyproject.toml  requirements.txt
example/: example.md  vector.py
lab02/: main.md
labbs/lab01/lab01_13/: Лабораторная работа1.ipynb
labs/: result.csv  result.md
labs/lab01/: Untitled.md  functions.py  lab01.ipynb  lab01.md  labo1_04.ipynb  tests.py
labs/lab01/lab01_01/: skyfall.ipynb  skyfall.md  skyfall.py
labs/lab01/lab01_03/: Untitled.ipynb  Untitled.md
labs/lab01/lab01_04/: Untitled.ipynb  Untitled.md  decorators.py  functions.py  main.md  matrix.py
labs/lab01/lab01_05/: lab01_05.md
labs/lab01/lab01_06/: Lab01_06.ipynb  Lab01_06.md  lab01_06.md
labs/lab01/lab01_07/: 1.1.py  1.3.py  1.5.py  1.8.py  2.py
labs/lab01/lab01_08/: lab01_08.ipynb  lab01_08.md  lab1.py  lab1_2.py  lab1_3.py  lab1_4.py  matrix.py
labs/lab01/lab01_09/: Conclusions.txt  average_val.py  const_func.py  h.py  horner.py  matrix.py  max_func.py
labs/lab01/lab01_12/: main.py
labs/lab01/lab01_13/: lab01.py  lab01_13.md
labs/lab01/lab01_14/: main.py  task1.py  task2.py  task2_matrix.py  task3.py  task4.py  task5.py
labs/lab01/lab01_15/: dependencies.py  f1.py  f3.py  f6.py  f7.py  lab01_15.md  result.ipynb  task2.py
labs/lab01/labs_1_5/: Untitled1.ipynb
labs/lab02/: main.ipynb  main.md
labs/lab03/: main.md
labs/lab04/: main.md
labs/lab05/: main.md
labs/lab06/: main.md
labs/lab07/: main.md
labs/lab08/: main.md
labs/lab09/: main.md
labs/lab10/: main.md
projects/: projects.md
(+88 files in other folders)
