[tool.poetry]
name = "aads"
version = "0.1.0"
description = "Algorithms and Data Structures"
authors = ["askras <askrasnikov@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.0.3"
jupytext = "^1.15.1"
matplotlib = "^3.8.0"


[tool.jupytext]
formats = "ipynb,md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
