[tool.poetry]
name = "aads"
version = "0.1.0"
description = "Algorithms and Data Structures"
authors = ["askras <askrasnikov@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"


[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.26.1"
notebook = "^7.0.6"
jupytext = "^1.15.2"
matplotlib = "^3.8.1"
jupyter-server = "<2.11.0"  # https://github.com/mwouts/jupytext/issues/1165


[tool.jupytext]
formats = "ipynb,md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
